# DigitalTwin

./: CMakeLists.txt  main_window.cpp  main_window.ui
src/: main.cpp
src/algorithms/: CMakeLists.txt  checkerboard_test.cpp  checkerboard_test.h  lrand_test.cpp  lrand_test.h  march_a_test.cpp  march_a_test.h  march_b_test.cpp  march_b_test.h  march_c_test.cpp  march_c_test.h  march_lr_test.cpp  march_lr_test.h  mats_plus_plus_test.cpp  mats_plus_plus_test.h  simple_test.cpp  simple_test.h  test_algorithm.h
src/core/: CMakeLists.txt  faulty_memory.cpp  faulty_memory.h
src/fault_models/: CMakeLists.txt  bit_flip.cpp  bit_flip.h  bit_flip_logic.cpp  bit_flip_logic.h  bit_flip_phy.cpp  bit_flip_phy.h  fault_model.h  rnd_stuck_at.cpp  rnd_stuck_at.h  stuck_at_one.cpp  stuck_at_one.h  stuck_at_zero.cpp  stuck_at_zero.h
src/main_window/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui
src/memory/: CMakeLists.txt  memory.cpp  memory.h
src/widget_details/: CMakeLists.txt  widget_details.cpp  widget_details.h  widget_details.ui
